--- a/firebase.json
+++ b/firebase.json
@@ -8,3 +8,12 @@
     ]
   }
 }
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EF9VTKXB5G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EF9VTKXB5G');
+</script>
