--- a/package.json
+++ b/package.json
@@ -3,3 +3,6 @@
     "@google-cloud/recaptcha-enterprise": "^3.1.1"
   }
 }
+dependencies {
+  implementation 'com.google.android.gms:play-services-ads:21.3.0'
+}
