--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "dependencies": {
     "@google-cloud/recaptcha-enterprise": "^3.1.1"
   }
-}
-dependencies {
-  implementation 'com.google.android.gms:play-services-ads:21.3.0'
-}
+<manifest>
+    <application>
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-xxxxxxxxxxxxxxxx~yyyyyyyyyy"/>
+    </application>
+</manifest>
