--- a/package.json
+++ b/package.json
@@ -2,19 +2,7 @@
   "dependencies": {
     "@google-cloud/recaptcha-enterprise": "^3.1.1"
   }
-import com.google.android.gms.ads.MobileAds;
-import com.google.android.gms.ads.initialization.InitializationStatus;
-import com.google.android.gms.ads.initialization.OnInitializationCompleteListener;
-
-public class MainActivity extends AppCompatActivity {
-    protected void onCreate(Bundle savedInstanceState) {
-        super.onCreate(savedInstanceState);
-        setContentView(R.layout.activity_main);
-
-        MobileAds.initialize(this, new OnInitializationCompleteListener() {
-            @Override
-            public void onInitializationComplete(InitializationStatus initializationStatus) {
-            }
-        });
-    }
+{
+  event: "gtm.load",
+  gtm: {uniqueEventId: 19, start: 1669460174605, priorityId: 1}
 }
